tests/fails/f47.t

terra foo()
  goto a
end
foo()
